--- a/Admin_Frontend/package.json
+++ b/Admin_Frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "framer-motion": "^10.13.1",
     "match-sorter": "^6.3.1",
+    "netlify-cli": "^15.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
